fix spacing in modal title

--- a/app/assets/stylesheets/post_show.css.scss
+++ b/app/assets/stylesheets/post_show.css.scss
@@ -46,7 +46,8 @@
   color: $red;
   font-size: 4em;
   text-align: center;
-  margin: 100px auto 0;
+  margin: 0 auto;
+  margin-top: 100px;
   font-family: 'Gotham';
   font-style: bold;
 }
